--- a/assets/style.css
+++ b/assets/style.css
@@ -1,39 +1,20 @@
+* {
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 0;
 	font-family: Verdana;
-	scroll-behavior: smooth;
 }
 
 header {
 	padding: 40px 0px;
-	display: flex;
-	justify-content: center;
 }
 
 header h1 {
 	font-size: xxx-large;
+	text-align: center;
 }
-
-/*.typing h1 {
-	font-size: xxx-large;
-    overflow: hidden; 
-    border-right: .05em solid black; 
-    white-space: nowrap; 
-    margin: 0 auto;
-    animation: 
-      	typing 3.5s steps(10, end),
-      	blink-caret .5s step-end infinite;
-}
- 
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-  
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: black }
-}*/
 
 main {
 	margin: 60px 0px;
@@ -42,7 +23,6 @@ main {
 .profile {
 	width: 70%;
 	height: 800px;
-	/*border: 1px solid black;*/
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
@@ -107,8 +87,29 @@ main {
 	font-size: 32px;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  height: 60px;
+  width: 55px;
+  font-size: 36px;
+  box-shadow: 4px 6px black;
+}
+
+#myBtn:hover {
+  box-shadow: 2px 4px black;
+}
+
 footer {
 	text-align: center;
 	bottom: 0;
 	width: 100%;
 }
+
