--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-	padding: 40px 0px;
+	padding: 30px 0px;
 }
 
 header h1 {
@@ -22,7 +22,7 @@ main {
 
 .profile {
 	width: 70%;
-	height: 800px;
+	height: auto;
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-around;
@@ -35,13 +35,13 @@ main {
 	width: 240px;
 	padding-top: 30px;
 	box-shadow: 10px 15px black;
+	margin: 30px;
 }
 
 .profile-card:hover {
 	box-shadow: 5px 12px black;
 	cursor: pointer;
 }
-
 
 .profile-card img {
 	width: 65%;
@@ -51,14 +51,13 @@ main {
 	display: block;
 	margin: 0 auto;
 	-webkit-filter: grayscale(100%);
- 	 filter: grayscale(100%);
+	filter: grayscale(100%);
 }
 
 .profile-card:hover img {
 	-webkit-filter: grayscale(0%);
 	filter: grayscale(0%);
 }
-
 
 .profile-detail {
 	padding: 10px 0px;
@@ -88,28 +87,122 @@ main {
 }
 
 #myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: 1px solid black;
-  background-color: white;
-  color: black;
-  cursor: pointer;
-  height: 60px;
-  width: 55px;
-  font-size: 36px;
-  box-shadow: 4px 6px black;
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	border: 1px solid black;
+	background-color: white;
+	color: black;
+	cursor: pointer;
+	height: 60px;
+	width: 55px;
+	font-size: 36px;
+	box-shadow: 4px 6px black;
 }
 
 #myBtn:hover {
-  box-shadow: 2px 4px black;
+	box-shadow: 2px 4px black;
 }
 
 footer {
+	margin-top: 40px;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
 }
 
+/* Media Queries for Small Devices */
+@media screen and (max-width: 576px) {
+	header h1 {
+		font-size: xx-large;
+	}
+
+	.profile {
+		width: 90%;
+	}
+
+	.profile-card {
+		width: 100%;
+		height: auto;
+		margin-bottom: 20px;
+	}
+
+	.profile-card img {
+		width: 50%;
+		height: auto;
+	}
+
+	.profile-detail {
+		padding: 5px 0px;
+	}
+
+	.social-media {
+		font-size: large;
+	}
+
+	#myBtn {
+		height: 50px;
+		width: 45px;
+		font-size: 30px;
+	}
+}
+
+/* Media Queries for Tablets and Small Laptops */
+@media screen and (max-width: 768px) {
+	header h1 {
+		font-size: x-large;
+	}
+
+	.profile {
+		width: 85%;
+	}
+
+	.profile-card {
+		width: 200px;
+		height: auto;
+	}
+
+	.profile-detail h2 {
+		font-size: 20px;
+	}
+
+	.profile-detail h3 {
+		font-size: 18px;
+	}
+
+	.profile-card img {
+		width: 60%;
+	}
+
+	.profile-card a {
+		font-size: 26px;
+	}
+
+	#myBtn {
+		height: 55px;
+		width: 50px;
+		font-size: 34px;
+	}
+}
+
+/* For screens larger than 768px but up to 1000px (small laptops) */
+@media screen and (max-width: 1000px) and (min-width: 768px) {
+	header h1 {
+		font-size: xx-large;
+	}
+
+	.profile {
+		width: 80%;
+	}
+
+	.profile-card {
+		width: 220px;
+		height: 300px;
+	}
+
+	.profile-card img {
+		width: 60%;
+	}
+}
